# TFG

./: .gitignore
Data/: readme.md
Images/: readme.md
Images/Jupyter/: regression.csv
Images/TestCase1/: regression.csv
Images/TestCase2/: regression.csv
Images/TestCase3/: regression.csv
Images/ULA16_Temp/: regression.csv
Images/ULA32_Temp/: regression.csv
Images/ULA64_Temp/: regression.csv
Images/ULA8_Temp/: regression.csv
Kidnapped_robot/worlds/: .test_world_3.wbproj  test_world_3.wbt
Models/: readme.md
Scripts/Create Datasets/: README.md  generate_scenarios.py
Scripts/HyNN Models/: README.md
TCs/: tinto.py
TCs/src/test_cases_package/: package.xml  requirements.txt  run_experiments.py  setup.cfg  setup.py
TCs/src/test_cases_package/launch/: webots_launch_tc1.py  webots_launch_tc2.py  webots_launch_tc3.py
TCs/src/test_cases_package/test_cases_package/: generate_plots.py  robot_controller.py
Test Case 1/: analysis.ipynb  crear.ipynb  noise.ipynb  subsampling.ipynb
Test Case 1/Results/: posiciones_reales.npy  posiciones_ruta.csv  results.txt
Test Case 2/: analysis.ipynb  crear.ipynb  noise.ipynb  subsampling.ipynb
Test Case 2/Results/: posiciones_ruta_old.csv
Test Case 3/: analysis.ipynb  crear.ipynb  noise.ipynb  subsampling.ipynb
Test Case 3/Results/: posiciones_ruta.csv
Test Cases/: analysis.ipynb  crear.ipynb  noise.ipynb
Test Cases/Results/: posiciones_redondeadas.npy
my_first_simulation/controllers/: robot_controller.py  tinto.py
my_first_simulation/worlds/: .appearance.wbproj  .collision_avoidance.wbproj  (+13 more)
(+428 files in other folders)
